# Study

./: .breakpoints  .gitignore  .replit  Untitled Diagram.drawio  foo.txt  myinfo.json  pop.py  sub_dir_search.py  tapto4.py  test.py  wikidocs_12.html  새 파일.txt
miniproject/: RSP.py
rust/: Cargo.toml  ch1~6.rs
rust/comprehensive_rust/day1_afternoon/: Cargo.toml
rust/comprehensive_rust/day1_morning/: Cargo.toml
rust/comprehensive_rust/day2_afternoon/: Cargo.toml
rust/comprehensive_rust/day2_morning/: Cargo.toml
rust/comprehensive_rust/day3_afternoon/: Cargo.toml
rust/comprehensive_rust/day3_morning/: Cargo.toml
rust/comprehensive_rust/day4_afternoon/: Cargo.toml
rust/comprehensive_rust/day4_morning/: Cargo.toml
rust/easyrust/: ch1_6.rs  ch7_.rs
rust/rust_book/: Cargo.toml
rust/rust_book/CH2/: CH2.rs
rust/rust_book/book_chapter10/: Cargo.toml
rust/rust_book/book_chapter11/: Cargo.toml
rust/rust_book/book_chapter12_revision13/: Cargo.toml
rust/rust_book/book_chapter13/: Cargo.toml
rust/rust_book/book_chapter15/: Cargo.toml
rust/rust_book/book_chapter16/: Cargo.toml
rust/rust_book/book_chapter17/: Cargo.toml
rust/rust_book/book_chapter18/: Cargo.toml
rust/rust_book/book_chapter19/: Cargo.toml
rust/rust_book/book_chapter2/: Cargo.toml
rust/rust_book/book_chapter20/: 404.html  Cargo.toml  hello.html
rust/rust_book/book_chapter3/: Cargo.toml
rust/rust_book/book_chapter4/: Cargo.toml
rust/rust_book/book_chapter5/: Cargo.toml
rust/rust_book/book_chapter6/: Cargo.toml
rust/rust_book/book_chapter7/: Cargo.toml
rust/src/: main.rs
(+313 files in other folders)
