workspace = { members = [ "comprehensive_rust/day1_afternoon", "comprehensive_rust/day1_morning", "comprehensive_rust/day2_morning", "rust_book","rust_book/Chapter2", "rust_book/book_chapter2", "rust_book/book_chapter3", "rust_book/chapter2", "rust_udemy/intermediate_idiomatic", "rust_udemy/sction2", "rust_udemy/section3", "rust_udemy/section4", "rust_udemy/section5", "rust_udemy/section6", "rust_udemy/section7", "rust_udemy/section7/invaders", "rust_udemy/ultimate_rust_crash_course/exercise/a_variables/variables", "rust_udemy/ultimate_rust_crash_course/hello"] }
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
