workspace = { members = [ "book_chapter10", "book_chapter11", "book_chapter12", "book_chapter12_revision13", "book_chapter13", "book_chapter14","book_chapter3", "book_chapter8", "book_chapter9"] }
[package]
name = "rust_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
